# vibecoding

./: .gitignore  README.md
search_agent/: spec.md  walkthrough.md
search_agent/backend/: .env.example  README.md  requirements.txt
search_agent/backend/src/: config.py  main.py
search_agent/frontend/: README.md  next.config.ts
stock_agent/: README.md
stock_agent/a2aserver/: .env.example  README.md  main.py  pyproject.toml
stock_agent/backend/: .env.example  Dockerfile  README.md  debug_payload.txt  functio_specs.md  pyproject.toml  system_prompt.md  system_prompt.md.bak  system_prompt.md_from_gemini
stock_agent/backend/app/: config.py  main.py  models.py
stock_agent/backend/app/services/: a2a_client.py  advanced_financial_model.py  dev_log_sink.py  file_parser.py  financial_model.py  market_analyzer.py  mcp_client.py  openai_client.py  research_agent.py  scenario_analyzer.py  sec_ingestion.py  sentiment.py  valuation_engine.py  vector_store.py  web_search.py
stock_agent/backend/tests/: test_advanced_financial_model.py  test_file_parser.py  test_financial_model.py  test_main_api.py  test_scenario_analyzer.py  test_sec_ingestion.py  test_valuation_engine.py
stock_agent/frontend/: Dockerfile  README.md  functio_specs.md  package.json  tsconfig.tsbuildinfo
stock_agent/frontend/components/: AboutSection.tsx  (+10 more)
stock_agent/mcpserver/: .env.example  README.md  main.py  pyproject.toml
vectordb_agent/: README.md  deploy_vm.sh  docker-compose.yml  spec.md  walkthrough.md
vectordb_agent/backend/: .gitignore  Dockerfile
vectordb_agent/frontend/: Dockerfile
(+21 files in other folders)
