[project]
name = "stock-research-backend"
version = "0.1.0"
description = "FastAPI backend for deep research stock trading assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "pypdf>=5.9.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
